# halo_custom_field_builder

./: .env.template  .gitignore  Cargo.toml  README.md
src/: api.rs  config.rs  error.rs  logging.rs  main.rs  readers.rs  screens.rs  transformers.rs
src/api/: field_client.rs  mod.rs
src/auth/: client.rs  mod.rs
src/models/: field.rs  import_result.rs  mod.rs
src/readers/: csv_reader.rs
src/transformers/: json_transformer.rs
