[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
csv = "1.3"
url = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clearscreen = "2.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
simplelog = "0.12"
colored = "2.0"